fixed border color, so it doesnt stand out too much

--- a/src/App.scss
+++ b/src/App.scss
@@ -142,7 +142,7 @@ header {
   }
   .taskBox {
     li {
-      border-bottom: 2px solid partial.$blueBlack;
+      border-bottom: 2px solid partial.$mediumBlue;
       padding-top: 0.5rem;
 
       &:last-child {
